[package]
name = "moss-street-api-models"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tokio = {version = "1.42.0", features = ['full']}
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = "0.6.2"

[build-dependencies]
tonic-build = "0.12.3"
anyhow = "1.0.95"
